# ComfyUI-TaylorSeer

./: README.md  README_zh.md  flux_hook.py  hidream_hook.py  lumina_hook.py  nodes.py  pyproject.toml  qwenimage_hook.py  wanvideo_hook.py
.github/workflows/: publish.yml
examples/: image_flux2_klein_image_edit_4b_base_taylorseerlite.json  image_flux2_klein_text_to_image_taylorseerlite.json  taylorseer_example_flux.json  taylorseer_example_flux_blockswap.json  taylorseer_example_flux_controlnet.json  taylorseer_example_hidream_full.json  taylorseerlite_example_flux.json  taylorseerlite_example_qwenimage.json  taylorseerlite_example_wan2-2.json  taylorseerlite_example_z-image.json  taylorseerlite_flux2_example.json
